Fix mobile layout issue

--- a/themes/cheerseq/assets/scss/components/_strip.scss
+++ b/themes/cheerseq/assets/scss/components/_strip.scss
@@ -50,6 +50,8 @@
   display: flex;
   flex-flow: row wrap;
   gap: 20px;
+  align-items: center;
+  justify-content: center;
 }
 
 .strip .container ul li {
